css/style.css
/********** Template CSS **********/
/* Importing fonts from Google */
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap");

:root {
    --primary: #8bfbde;
    --secondary: #090b40;
    --light: #f8f8f9;
    --dark: #001d23;
    --gery: #787878;
    --dark: #090b40;
    --secondary-color: 9, 11, 64;
}

/* GLOBAL TEMPLATE */

.text-primary {
    color: var(--primary) !important;
}

.text-secondary {
    color: var(--secondary) !important;
}

.text-tertiary {
    color: #787878 !important;
}

.back-to-top {
    position: fixed;
    display: none;
    right: 30px;
    bottom: 30px;
    z-index: 99;
}

.brand-logo {
    height: 48px;
}

.top-bar a {
    color: #ffffff80 !important;
}

/*** Spinner ***/
#spinner {
    opacity: 0;
    visibility: hidden;
    transition: opacity 0.5s ease-out, visibility 0s linear 0.5s;
    z-index: 99999;
}

#spinner.show {
    transition: opacity 0.5s ease-out, visibility 0s linear 0s;
    visibility: visible;
    opacity: 1;
}

/*** Button ***/
.btn {
    font-weight: 500;
    transition: 0.5s;
}

.btn.btn-lg.btn-secondary.btn-lg-square.back-to-top:hover {
    background-color: white !important;
    color: var(--secondary) !important;
}

.btn.btn-outline-primary:hover {
    color: var(--secondary);
}

.btn.btn-outline-primary:hover .rounded-circle {
    background-color: var(--secondary) !important;
    color: var(--primary) !important;
}

.btn.btn-primary:hover {
    color: var(--primary) !important;
    background: transparent;
    & .rounded-circle {
        background-color: var(--primary) !important;
        color: var(--secondary) !important;
    }
}

.btn-outline-secondary:hover {
    color: #fff;
    background-color: #232142;
    border-color: #fff;
    & .rounded-circle {
        background-color: var(--light) !important;
        color: var(--secondary) !important;
    }
}

.btn-square {
    width: 38px;
    height: 38px;
}

.btn-sm-square {
    width: 32px;
    height: 32px;
}

.btn-lg-square {
    width: 48px;
    height: 48px;
}

.btn-square,
.btn-sm-square,
.btn-lg-square {
    padding: 0;
    display: flex;
    align-items: center;
    justify-content: center;
    font-weight: normal;
}

/*** Navbar ***/

.bg-dark {
    background-color: var(--secondary) !important;
}

.fixed-top {
    transition: 0.5s;
}

.top-bar {
    height: 45px;
    border-bottom: 1px solid rgba(255, 255, 255, 0.07);
}

.navbar .dropdown-toggle::after {
    border: none;
    content: "\f107";
    font-family: "Font Awesome 5 Free";
    font-weight: 900;
    vertical-align: middle;
    margin-left: 8px;
}

.navbar .navbar-nav .nav-link {
    margin-right: 30px;
    padding: 25px 0;
    color: #ffffff;
    font-weight: 500;
    outline: none;
}

.navbar .navbar-nav .nav-link:hover,
.navbar .navbar-nav .nav-link.active {
    color: var(--primary);
}

@media (max-width: 991.98px) {
    .navbar .navbar-nav {
        margin-top: 10px;
        border-top: 1px solid rgba(0, 0, 0, 0.07);
        background: var(--dark);
    }

    .navbar .navbar-nav .nav-link {
        padding: 10px 0;
    }
}

@media (min-width: 992px) {
    .navbar .nav-item .dropdown-menu {
        display: block;
        visibility: hidden;
        top: 100%;
        transform: rotateX(-75deg);
        transform-origin: 0% 0%;
        transition: 0.5s;
        opacity: 0;
    }

    .navbar .nav-item:hover .dropdown-menu {
        transform: rotateX(0deg);
        visibility: visible;
        transition: 0.5s;
        opacity: 1;
    }
}

/*** Header ***/
.carousel-caption {
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    display: flex;
    align-items: center;
    justify-content: center;
    text-align: center;
    background: rgba(var(--secondary-color), 0.8);
    z-index: 1;
}

.carousel-control-prev,
.carousel-control-next {
    width: 15%;
}

.carousel-control-prev-icon,
.carousel-control-next-icon {
    width: 3rem;
    height: 3rem;
    background-color: var(--dark);
    border: 12px solid var(--dark);
    border-radius: 3rem;
}

@media (max-width: 768px) {
    #header-carousel .carousel-item {
        position: relative;
        min-height: 450px;
    }
    .contact-page form .btn-container {
        text-align: center;
        & span {
            display: block;
            margin-top: 20px !important;
        }
    }

    #header-carousel .carousel-item img {
        position: absolute;
        width: 100%;
        height: 100%;
        object-fit: cover;
    }
}

@media (max-width: 450px) {
    .about .btn-container .btn {
        margin-bottom: 16px !important;
    }

    .about .btn-container {
        text-align: center;
    }
}

.page-header {
    padding-top: 12rem;
    padding-bottom: 6rem;
    background: linear-gradient(
            rgba(var(--secondary-color), 0.8),
            rgba(var(--secondary-color), 0.8)
        ),
        url(../img/carousel-1.jpg) center center no-repeat;
    background-size: cover;
}

.page-header .breadcrumb-item + .breadcrumb-item::before {
    color: #999999;
}

/* TEXT INPUT */

.form-control:focus {
    border-color: var(--secondary);
    outline: 0;
    box-shadow: 0 0 0 2px rgba(9, 11, 64, 0.25);
}

.footer .form-control:focus {
    border-color: var(--primary);
    outline: 0;
    box-shadow: 0 0 0 0.25rem rgba(87, 255, 220, 0.25);
}

/*** Tech ***/

.techs.-item .progress {
    height: 5px;
    border-radius: 0;
    overflow: visible;
}

.techs.-item .progress .progress-bar {
    position: relative;
    overflow: visible;
    width: 0px;
    border-radius: 0;
    transition: 5s;
}

.techs.-item .progress .progress-bar span {
    position: absolute;
    top: -7px;
    right: 0;
    width: 40px;
    height: 19px;
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 12px;
    background: var(--primary);
    color: #ffffff;
}

.techs.-item .techs.-overlay {
    position: absolute;
    width: 100%;
    height: 0;
    top: 0;
    left: 0;
    display: flex;
    align-items: center;
    justify-content: center;
    background: rgba(0, 0, 0, 0.5);
    overflow: hidden;
    opacity: 0;
    transition: 0.5s;
}

.techs.-item:hover .techs.-overlay {
    height: 100%;
    opacity: 1;
}

/*** Service ***/
.service-item {
    box-shadow: 0 0 45px rgba(0, 0, 0, 0.06);
}

/*** Contact ***/
.contact-banner .overlay {
    width: 100vw !important;
    height: 100%;
    background: rgba(var(--secondary-color), 0.8);
}

.btn-secondary:hover {
    color: var(--secondary);
    background-color: var(--light);
    border: 1px solid var(--secondary);
}

.btn-secondary:hover .rounded-circle {
    background-color: var(--secondary) !important;
    color: var(--light) !important;
}

.btn-group .btn-light:hover,
.btn-group input[type="radio"]:checked + label {
    color: var(--primary);
    border-color: var(--primary);
}

/*** Team ***/
.team-item img {
    position: relative;
    top: 0;
    transition: 0.5s;
}

.team-item:hover img {
    top: -30px;
}

.team-item .team-text {
    position: relative;
    height: 100px;
    transition: 0.5s;
}

.team-item:hover .team-text {
    margin-top: -60px;
    height: 160px;
}

.team-item .team-text .team-social {
    opacity: 0;
    transition: 0.5s;
}

.team-item:hover .team-text .team-social {
    opacity: 1;
}

.team-item .team-social .btn {
    display: inline-flex;
    color: var(--light);
    background: var(--secondary);
    border-radius: 40px;
}

.team-item .team-social .btn:hover {
    color: var(--secondary);
    background: var(--light);
    border: 1px solid var(--secondary);
}

/* PARTNERS START */
.owl-carousel .owl-item {
    transition: all 0.3s ease-in-out;
}

.owl-carousel .owl-item .card {
    position: relative;
    box-shadow: 0 0 45px rgba(0, 0, 0, 0.06);
    border: none;
    border-radius: 0;
}

.owl-carousel .owl-stage-outer {
    overflow-y: auto !important;
    padding-bottom: 40px;
}

.owl-carousel .owl-item img {
    height: 200px;
    object-fit: cover;
}

.owl-carousel .owl-item .card .name {
    position: absolute;
    bottom: -20px;
    left: 33%;
    color: #101c81;
    font-size: 1.1rem;
    font-weight: 600;
    background-color: aquamarine;
    padding: 0.3rem 0.4rem;
    border-radius: 5px;
    box-shadow: 2px 3px 15px #3c405a;
}

.owl-carousel .owl-item .card {
    opacity: 0.2;
    transform: scale3d(0.8, 0.8, 0.8);
    transition: all 0.3s ease-in-out;
}

.owl-carousel .owl-item.active.center .card {
    opacity: 1;
    transform: scale3d(1, 1, 1);
}

.owl-carousel .owl-dots {
    display: inline-block;
    width: 100%;
    text-align: center;
}

.owl-theme .owl-dots .owl-dot span {
    height: 10px;
    border-radius: 2px !important;
    opacity: 0.6;
}

.owl-theme .owl-dots .owl-dot.active span,
.owl-theme .owl-dots .owl-dot:hover span {
    height: 12px;
    width: 12px;
    opacity: 0.8;
    transform: translateY(2px);
    background: var(--primary) !important;
}

@media (min-width: 480.6px) and (max-width: 575.5px) {
    .owl-carousel .owl-item .card .name {
        left: 24%;
    }
}

@media (max-width: 360px) {
    .owl-carousel .owl-item .card .name {
        left: 30%;
    }
}
/* PARTNERS END */

/*** Footer ***/

.footer .btn.btn-link {
    display: block;
    margin-bottom: 5px;
    padding: 0;
    text-align: left;
    color: rgba(255, 255, 255, 0.5);
    font-weight: normal;
    text-transform: capitalize;
    transition: 0.3s;
}

.footer .btn.btn-link::before {
    position: relative;
    content: "\f105";
    font-family: "Font Awesome 5 Free";
    font-weight: 900;
    color: rgba(255, 255, 255, 0.5);
    margin-right: 10px;
}

.footer .btn.btn-link:hover {
    color: var(--light);
    letter-spacing: 1px;
    box-shadow: none;
}

.footer .btn.btn-square {
    color: rgba(255, 255, 255, 0.5);
    border: 1px solid rgba(255, 255, 255, 0.5);
}

.footer .btn.btn-square:hover {
    color: var(--primary);
    border-color: var(--primary);
}

.footer .copyright {
    padding: 25px 0;
    font-size: 15px;
    border-top: 1px solid rgba(256, 256, 256, 0.1);
}

.footer .copyright a {
    color: var(--secondary);
}

.footer .copyright a:hover {
    color: var(--primary);
}

